--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.93",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "2.17.0",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "aws-cdk-lib": "2.17.0",
+    "aws-sdk": "^2.1098.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.16"
   }
