create user service done

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/aws-lambda": "^8.10.93",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/uuid": "^8.3.4",
     "aws-cdk": "2.17.0",
     "esbuild": "^0.14.27",
     "jest": "^26.4.2",
@@ -25,6 +26,7 @@
     "aws-cdk-lib": "2.17.0",
     "aws-sdk": "^2.1098.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "uuid": "^8.3.2"
   }
 }
